style.css
:root {
    /* primary */
    --soft-red: hsl(7, 99%, 70%);
    --red: hsl(7, 85%, 54%);
    --yellow: hsl(51, 100%, 49%);
    --dark-yellow: hsl(51, 100%, 43%);
    --graphic-design-text: hsl(167, 40%, 24%); 
    --photography-text: hsl(198, 62%, 26%);
    --footer: hsl(168, 34%, 39%); 
    /* neutral */
    --very-dark-desaturated-blue: hsl(212, 27%, 19%);
    --very-dark-grayish-blue: hsl(213, 9%, 39%);
    --dark-grayish-blue: hsl(232, 10%, 55%);
    --grayish-blue: hsl(210, 4%, 67%);
    --white: hsl(0, 0%, 100%);   
    --footer-bg: hsl(167, 44%, 70%);
}

*, *::before, *::after {
    box-sizing: border-box;
}

* {
    margin: 0;
}

html, body {
    height: 100%;
}

body {
    line-height: 1.5;
    -webkit-font-smoothing: antialiased;
}

img, picture, video, canvas, svg {
    display: block;
    max-width: 100%;
}

input, button, textarea, select {
    font: inherit;
}

p, h1, h2, h3, h4, h5, h6 {
    overflow-wrap: break-word;
}

/*  */

/* 
font-family: 'Barlow', sans-serif;
font-family: 'Fraunces', serif;
 */

body {
    font-family: 'Barlow', sans-serif;
    text-align: center;
}

.desktop-img {
    display: none;
}

header {
    background-image: url(/images/mobile/image-header.jpg);
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    padding-bottom: 7rem;
}

.logo {
    width: 35%;
}

nav {
    position: fixed;
    background-color: #3ebfff;
    z-index: 100;
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 1.5rem 1rem;
}

/* The side navigation menu */
.sidenav {
    height: 35%; /* 100% Full-height */
    width: 0; /* 0 width - change this with JavaScript */
    position: fixed; /* Stay in place */
    z-index: 1; /* Stay on top */
    top: 80px; /* Stay at the top */
    right: 20px;
    left: 13px;
    bottom: 0;
    background-color: #ffffff; /* Black*/
    overflow-x: hidden; /* Disable horizontal scroll */
    padding-top: 0; /* Place content 60px from the top */
    transition: 0.4s; /* 0.5 second transition effect to slide in the sidenav */

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 1.5rem;
  }

/* The navigation menu links */
.sidenav a {
    text-decoration: none;
    font-size: 1.2rem;
    color: var(--dark-grayish-blue);
    display: block;
    transition: 0.3s;
}

.nav-btn {
    cursor: pointer;
}

/* When you mouse over the navigation links, change their color */
.sidenav a:hover {
    color: black;
}
  
/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
@media screen and (max-height: 450px) {
    .sidenav {padding-top: 15px;}
    .sidenav a {font-size: 18px;}
}
  
#nav-contact {
    background-color: var(--yellow);
    padding: .7rem 2rem;
    color:black;
    border-radius: 1.5rem;
    font-size: .9rem;
    font-family: 'Fraunces', serif;
    text-transform: uppercase;
}

#nav-contact:hover {
    opacity: .4;
}

/*  */

.main-header {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding-top: 3rem;
    gap: 3rem;
}

.main-header h1 {
    padding-top: 3rem;
    font-family: 'Fraunces', serif;
    text-transform: uppercase;
    letter-spacing: .3rem;
    font-weight: 900;
    line-height: 3rem;
    color: var(--white);
    font-size: 2.3rem;
}

.arrow-icon {
    width: 10%;
}

.grid-item-text {
    display: flex;
    flex-direction: column;
    justify-items: center;
    align-items: center;
    gap: 1.5rem;
    padding-bottom: 3rem;
}

.grid-item-text h2 {
    padding: 2rem 2rem 0 2rem;
    font-family: 'Fraunces', serif;
    color: var(--very-dark-desaturated-blue);
    font-weight: 900;
    font-size: 1.8rem;
    line-height: 2rem;
}

.grid-item-text p {
    padding: 0 1rem;
    color: var(--grayish-blue);
    font-weight: 600;
}

.grid-item-text a {
    font-family: 'Fraunces', serif;
    color: var(--very-dark-desaturated-blue);
    font-weight: 900;
    text-transform: uppercase;
    font-size: 1rem;
    text-decoration: none;
    text-decoration-thickness: 3px;
    padding-top: 1rem;
}

.transform-a:after {
    content: '';
    height: 8px;
    width: 105%;
    margin-left: -3px;
    border-radius: .5rem;
    margin-top: -8px;
    background: var(--yellow); 
    display:block;
    opacity: .4;
}

.transform-a:hover:after {
    content: '';
    height: 8px;
    border-radius: .5rem;
    margin-top: -8px;
    display:block;
    opacity: 1;
}

.audience-a:after {
    content: '';
    height: 8px;
    width: 105%;
    margin-left: -3px;
    border-radius: .5rem;
    margin-top: -8px;
    background: var(--soft-red); 
    display:block;
    opacity: .4;
}

.audience-a:hover:after {
    content: '';
    height: 8px;
    border-radius: .5rem;
    margin-top: -8px;
    display:block;
    opacity: 1;
}

.grid-item-background {
    display: flex;
    flex-direction: column;
    justify-items: center;
    align-items: center;
    gap: 1.5rem;
    padding-bottom: 3rem;
}

.grid-item-background h2 {
    padding: 2rem 2rem 0 2rem;
    padding-top: 24rem;
    font-family: 'Fraunces', serif;
    font-weight: 900;
    font-size: 1.7rem;
    line-height: 2rem;
}

.grid-item-background p {
    padding: 0 1rem;
    font-weight: bold;
    font-size: .9rem;
}

.graphic-design {
    color: var(--graphic-design-text);
    background-image: url(/images/mobile/image-graphic-design.jpg);
    background-size: cover;
    background-repeat: no-repeat;
}

.photography {
    color: var(--photography-text);
    background-image: url(/images/mobile/image-photography.jpg);
    background-size: cover;
    background-repeat: no-repeat;
}

.client-testimonials-section h2 {
    padding: 4rem 0;
    color: var(--dark-grayish-blue);
    font-family: 'Fraunces', serif;
    text-transform: uppercase;
    font-size: .9rem;
    letter-spacing: 3px;
}
/* ... */

